docs/sections/resources/yaml/keycloak-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
  name: keycloak-ui-http-route
  namespace: keycloak
spec:
  hostnames:
  - keycloak-ui.simpledemo.onap.org
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: common-gateway
    namespace: istio-ingress
    sectionName: https-80
  rules:
    Filters:
      Request Redirect:
        Port:         443
        Scheme:       https
        Status Code:  301
      Type:           RequestRedirect
    Matches:
      Path:
        Type:   PathPrefix
        Value:  /auth
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
  name: keycloak-ui-http-route
  namespace: keycloak
spec:
  hostnames:
  - keycloak-ui.simpledemo.onap.org
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: common-gateway
    namespace: istio-ingress
    sectionName: https-443
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: keycloak-keycloakx-http
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /auth
